# magi-codex

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
plugins/magi/: README.md
plugins/magi/docs/: MAGI-System-Documentation.md
plugins/magi/skills/magi/scripts/: finding_validation.py  input_size.py  reporting.py  temp_dirs.py  validate.py
skills/magi/: SKILL.md
skills/magi/scripts/: __init__.py  consensus.py  cost.py  finding_id.py  models.py  parse_agent_output.py  review_context.py  run_lock.py  run_magi.py  sanitize.py  synthesize.py
tests/: test_cost.py  test_entry_point_invocation.py  test_finding_id.py  test_finding_validation.py  test_input_size.py  test_parse_agent_output.py  test_review_context.py  test_run_lock.py  test_run_magi.py  test_sanitize.py  test_status_display.py  test_synthesize.py  test_temp_dirs.py
tests/fixtures/claude-cli-outputs/: README.md  content-block-not-first.json  content-block-shape.json  plain-string-shape.json  result-shape.json  result-with-markdown-fences.json  result-with-prose-preamble.json
